Bug#30310 wrong result on SELECT * FROM INFORMATION_SCHEMA.SCHEMATA WHERE .. 1. added check to fill_schema_schemata() func.    if we have db lookup value we should check that db exists 2. added check to get_all_tables() func    if we have lookup db name or tables name values we shoud check that    these values are not empty strings 3. fixed typo